# mt5

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/: mcp.json
config/: bot.yaml
dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Chart.tsx  HistoryView.tsx
dashboard/src/hooks/: useBotWs.ts
dashboard/src/lib/: tradeUi.tsx
src/bot_server/: __init__.py  history.py  main.py  routes.py  state.py
src/ema_bot/: __init__.py  broker.py  cli.py  config.py  engine.py  models.py  persistence.py  secure_profit.py  strategy.py
src/mt5_mcp/: __init__.py  connection.py  server.py
src/mt5_mcp/tools/: __init__.py  account.py  analytics.py  bot.py  indicators.py  market.py  terminal.py  trading.py
